[tool.poetry]
name = "thenewboston-node"
version = "0.1.0"
description = ""
authors = ["Bucky Roberts <buckyroberts@gmail.com>"]
license = "MIT"
packages = [
    { include = "thenewboston_node" },
]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
psycopg2 = "^2.8.6"
django-split-settings = "^1.0.1"
PyYAML = "^5.4.1"
sentry-sdk = "^1.0.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
pytest-django = "^4.1.0"
pytest-xdist = "^2.2.1"
pdbpp = "^0.10.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "thenewboston_node.project.settings"
python_files = "test_*.py"
testpaths = ["thenewboston_node"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
