[tool.poetry]
name = "thenewboston-node"
version = "0.1.0"
description = ""
authors = ["Bucky Roberts <buckyroberts@gmail.com>"]
license = "MIT"
packages = [
    { include = "thenewboston_node" },
]
readme = "README.rst"

[tool.poetry.dependencies]
Django = "^3.1.7"
PyNaCl = "^1.4.0"
PyYAML = "^5.4.1"
Pygments = "^2.9.0"
atomicwrites = "^1.4.0"
cachetools = "^4.2.1"
celery = "^5.1.2"
daphne = "^3.0.2"
django-filter = "^2.4.0"
django-split-settings = "^1.0.1"
django-tqdm = "^1.0.0"
djangorestframework = "^3.12.4"
djangorestframework-dataclasses = "^0.9"
docutils = "^0.17.1"
drf-spectacular = "^0.15.1"
filelock = "^3.0.12"
more-itertools = "^8.7.0"
msgpack = "^1.0.2"
psycopg2 = "^2.8.6"
pystun3 = "^1.0.0"
python = "^3.9"
requests = "^2.26.0"
sentry-sdk = "^1.0.0"
tabulate = "^0.8.9"
tqdm = "^4.59.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
Jinja2 = "^2.11.3"
class-doc = "^0.2.6"
colorlog = "^4.8.0"
dataclass-bakery = "^0.0.6"
httpretty = "^1.1.3"
pdbpp = "^0.10.2"
pre-commit = "^2.10.1"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-celery = "^0.0.0"
pytest-cov = {extras = ["toml"], version = "^2.11.1"}
pytest-django = "^4.1.0"
pytest-xdist = "^2.2.1"
yappi = "^1.3.2"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "thenewboston_node.project.settings"
python_files = "test_*.py"
testpaths = ["thenewboston_node"]

[tool.coverage.run]
omit = [
    "thenewboston_node/business_logic/tests/*",
    "thenewboston_node/core/tests/*",
    "thenewboston_node/project/tests/*",
]

[tool.isort]
known_django="django"
sections="FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
